<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Voice of God</string>
    <string name="menu_settings">Settings</string>
    
    <!--  User Homepage -->
    <string name="user_homepage">My Slams</string>
    <string name="new_user_message">Enter a username!</string>
    <string name="logout">Logout</string>
    <string name="title_activity_create_slam">Create A Slam</string>
    <string name="new_team_slam">Create A Slam</string>
    <string name="point">the point is not the points, the point is the poetry</string>
    
    
    <string name="current_email">Current Email</string>
    <!-- Login Strings -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in_register"><b>Go in</b> (or create new account)</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="menu_forgot_password">Recover lost password</string>

    <string name="login_progress_signing_in">Warming up&#8230;</string>

    <string name="error_invalid_email">This email is wack</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is not correct</string>
    <string name="error_field_required">This field is required</string>
     
     <!-- User View -->
    <string name="user_activity">Your Slams</string>
    
    <!-- New Team Slam -->
    <string name="prompt_host">Host Name</string>
    <string name="prompt_venue">Venue Name</string>
    <string name="pick_date">Change Date</string>
    <string name="save_slam">Save Slam</string>
    <string name="num_teams"># of Teams:</string>
	<string name="poem_time">Poem Time Limit:</string>
    <string name="poem_min">Min</string>
   	<string name="poem_sec">Sec</string>
        
    

</resources>