<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    
    <TextView
        style="@style/header"
		android:layout_width="wrap_content" 
   		android:layout_height="wrap_content" 
   		android:text="@string/point"/> 
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        						android:gravity="center"
        android:layout_gravity="center"
   		android:orientation="horizontal">
	    <Button
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/new_team_slam" 
		    android:onClick="makeSlam"/>
		<Button
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/logout" 
		    android:onClick="logoutButton"/>
	</LinearLayout>
</LinearLayout>